--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -6,11 +6,13 @@ agent:
   tools: 
     - google_search
     - answer
+  task_info: Null # For react agent, you can specify the task info here
   reward_name: "qa_f1_reward"
   backend: "async_verl"
   max_steps: 4
   num_chains: 5
   log_file: null
+  project_name: ${trainer.project_name}
 
 data:
   tokenizer: null
